--- a/src/components/shop/Shop.css
+++ b/src/components/shop/Shop.css
@@ -37,8 +37,13 @@
 
 .productTitle {
     max-width: 300px;
+    color: black;
 }
 
 .productPrice {
     color: grey;
+}
+
+.productLink {
+    text-decoration: none;
 }
