--- a/src/components/cart/Cart.css
+++ b/src/components/cart/Cart.css
@@ -11,8 +11,8 @@
 
 .cart3 {
     /* Left: 50%; */
-    /* transform: translateX(-40%); */
-    justify-content: center;
+    /* transform: translateX(40%); */
+    align-self: center;
 }
 
 .cartItem {
@@ -34,4 +34,15 @@
     height: 200px;
     width: 200px;
     border-radius: 5px;
+    margin-bottom: 16px;
+}
+
+.deleteBttn {
+    background-color: darkred;
+    color: white;
+    font-weight: bold;
+    border-radius: 5px;
+    margin-bottom: 16px;
+    padding-top: 8px;
+    padding-bottom: 8px;
 }
